---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT\n       TO_TIMESTAMP('04/05/2024 01:02:03', 'mm/dd/yyyy hh24:mi:ss') as a,\n       TO_TIMESTAMP('04/05/2024 01:02:03') as b\""
info: "Setup queries: SET timestamp_input_format = 'mm/dd/yyyy hh24:mi:ss'"
---
Ok(
    [
        "+---------------------+---------------------+",
        "| a                   | b                   |",
        "+---------------------+---------------------+",
        "| 2024-04-05T01:02:03 | 2024-04-05T01:02:03 |",
        "+---------------------+---------------------+",
    ],
)
